[workspace]
members = [
  "packages/rusaint",
  "packages/rusaint-cli",
  "packages/rusaint-ffi",
  "uniffi-bindgen",
  "session-helper",
]
resolver = "3"

[workspace.package]
version = "0.13.0"

keywords = ["ssu", "u-saint", "scraping", "parser"]
authors = ["Hyomin Koo <me@eatsteak.dev>"]
license = "MIT"
homepage = "https://eatsteak.dev"
repository = "https://github.com/EATSTEAK/rusaint"
edition = "2024"
readme = "README.md"

[workspace.dependencies]
thiserror = "2"
tokio = "1.47.1"
uniffi = "0.29.4"
rusaint = { version = "0.13.0", path = "packages/rusaint" }

[workspace.lints.clippy]
collapsible_if = "allow"
