[workspace]
members = [
  "packages/rusaint",
  "packages/rusaint-cli",
  "packages/rusaint-ffi",
  "uniffi-bindgen",
]
resolver = "3"

[workspace.package]
version = "0.16.2"

keywords = ["ssu", "u-saint", "scraping", "parser"]
authors = ["Hyomin Koo <me@eatsteak.dev>"]
license = "MIT"
homepage = "https://eatsteak.dev"
repository = "https://github.com/EATSTEAK/rusaint"
edition = "2024"
readme = "README.md"

[workspace.dependencies]
thiserror = "2"
tokio = "1"
uniffi = "0.31.0"
rusaint = { version = "0.16.2", path = "packages/rusaint" }
