[package]
name = "rusaint-ffi"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "rusaint_ffi"

[dependencies]
uniffi = { version = "0.28.0" }
rusaint = { path = "../rusaint", features = ["uniffi"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }
