[package]
name = "rusaint-uniffi"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "rusaintuniffi"

[dependencies]
thiserror = { workspace = true }
tokio = { version = "1.29.1", features = ["time", "sync"] }
rusaint = { path = "../rusaint" }
uniffi = { workspace = true, features = ["tokio"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
