[package]
name = "rusaint-session-helper"
version = "0.1.0"
publish = false

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[[bin]]
name = "session-helper"
path = "src/main.rs"

[dependencies]
rusaint = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
dotenvy = "0.15.7"

[lints]
workspace = true
